# CodeLeash

./: .dockerignore  .env.example  .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .sqlfluff  .vulture_whitelist.py  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  fly.toml  init.sh  knip.json  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.json  vite-plugin-entry-url.js  vite.config.js  vitest.config.ts  worker.py
.claude/: settings.json
.claude/commands/: learnings.md  review.md  tests.md
.claude/learnings/: README.md
.github/workflows/: ci.yml  deploy.yml  pages.yml
app/: __init__.py
app/core/: app.py  auth.py  auth_dependencies.py  build_info.py  config.py  container.py  db_errors.py  exceptions.py  field_guard.py  logging.py  metrics.py  repository_dependencies.py  retry.py  sentry.py  service_dependencies.py  supabase.py  templates.py  tracing.py  types.py  vite_loader.py  worker_dependencies.py
app/models/: __init__.py  enums.py  greeting.py  initial_data.py  user.py
app/models/schemas/: greeting_schemas.py
app/repositories/: __init__.py  base.py  greeting.py  job.py
app/routes/: __init__.py  greetings_api.py  index.py  utils.py
app/services/: greeting.py
app/templates/: page.html
app/utils/: color_derivation.py
app/workers/: __init__.py  queue_worker.py
app/workers/handlers/: __init__.py  greeting_handler.py
docs/: 00-intro.md  01-full-stack-monorepo.md  02-tdd-guard.md  03-how-tests-work.md  04-agent-optimizations.md  05-code-quality-checks.md  06-worker-system.md  07-worktree-parallel-work.md  08-future-and-community.md  Makefile  metadata.yaml  style.css
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: agent-optimizations.md  code-quality-checks.md  full-stack-monorepo.md  future-and-community.md  how-tests-work.md  intro.md  self-reflection.md  tdd-guard.md  worker-system.md  worktree-parallel-work.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs-site/static/: CNAME
scripts/: check_brand_colors.py  check_code_quality.py  check_dashboard_metrics.py  check_dynamic_imports.py  check_emdashes.py  check_frontend_code_quality.py  check_obsolete_terms.py  check_soft_deletes.py  check_unused_code.py  check_unused_routes.py  cleanup_orphaned_e2e.sh  extract_supabase_env.sh  generate_dashboard.py  generate_types.py  plan_exit_hook.py  run_e2e_tests.py  tdd_common.py  tdd_log.py  tdd_post_bash.py  tdd_pre_edit.py  tdd_session_start.py  tdd_subagent_start.py  tdd_subagent_stop.py
site/: index.html
src/: app.ts  constants.ts  index.css  main.ts  testReporter.ts  vite-env.d.ts
src/components/: GreetingList.test.tsx  GreetingList.tsx
src/components/ui/: ErrorBoundary.tsx
src/constants/: theme.ts
src/contexts/: InitialDataContext.ts  InitialDataProvider.tsx
src/hooks/: useInitialData.test.tsx  useInitialData.ts
src/pages/: Index.test.tsx  Index.tsx
src/roots/: index.tsx  util.tsx
src/types/: initial-data.ts
supabase/: seed.sql  storage-buckets.toml
supabase/migrations/: 20260223000001_create_greetings_table.sql  20260223000002_create_jobs_table.sql
tests/: conftest.py  mock-utils.ts  setup.ts  test_retry_decorator.py  test_tracing.py
tests/e2e/: __init__.py  conftest.py  polling.py  test_hello_world.py
tests/integration/: conftest.py  test_greeting_api.py  test_greeting_repository.py
tests/migration/: FUTURE.md
tests/unit/routes/: test_greetings_api.py
tests/unit/scripts/: test_check_code_quality.py  test_check_emdashes.py  test_check_frontend_code_quality.py  test_check_obsolete_terms.py  test_check_soft_deletes.py  test_check_unused_routes.py  test_plan_exit_hook.py  test_tdd_common.py  test_tdd_log.py  test_tdd_post_bash.py  test_tdd_pre_edit.py  test_tdd_session_start.py  test_tdd_subagent_start.py  test_tdd_subagent_stop.py
tests/unit/services/: test_greeting_service.py
tests/unit/workers/: test_greeting_handler.py  test_queue_worker.py
tools/: main-dashboard.json
